--- a/stepping_motor.ioc
+++ b/stepping_motor.ioc
@@ -9,10 +9,13 @@ Mcu.IP3=TIM2
 Mcu.IPNb=4
 Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PA10
-Mcu.Pin1=VP_SYS_VS_Systick
-Mcu.Pin2=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=3
+Mcu.Pin0=PA8
+Mcu.Pin1=PA9
+Mcu.Pin2=PA10
+Mcu.Pin3=PB5
+Mcu.Pin4=VP_SYS_VS_Systick
+Mcu.Pin5=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=6
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -31,6 +34,12 @@ NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
 PA10.Locked=true
 PA10.Signal=GPIO_Output
+PA8.Locked=true
+PA8.Signal=GPIO_Output
+PA9.Locked=true
+PA9.Signal=GPIO_Output
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F401
 PCC.MCU=STM32F401R(D-E)Tx
