--- a/stepping_motor.ioc
+++ b/stepping_motor.ioc
@@ -9,20 +9,22 @@ Mcu.IP3=TIM2
 Mcu.IPNb=4
 Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PA8
-Mcu.Pin1=PA9
-Mcu.Pin2=PA10
-Mcu.Pin3=PB5
-Mcu.Pin4=VP_SYS_VS_Systick
-Mcu.Pin5=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=6
+Mcu.Pin0=PC13-ANTI_TAMP
+Mcu.Pin1=PA8
+Mcu.Pin2=PA9
+Mcu.Pin3=PA10
+Mcu.Pin4=PB5
+Mcu.Pin5=VP_SYS_VS_Systick
+Mcu.Pin6=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=7
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
-MxCube.Version=4.26.1
-MxDb.Version=DB.4.0.261
+MxCube.Version=5.0.0
+MxDb.Version=DB.5.0.0
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -40,6 +42,11 @@ PA9.Locked=true
 PA9.Signal=GPIO_Output
 PB5.Locked=true
 PB5.Signal=GPIO_Output
+PC13-ANTI_TAMP.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PC13-ANTI_TAMP.GPIO_Label=B1 [Blue PushButton]
+PC13-ANTI_TAMP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC13-ANTI_TAMP.Locked=true
+PC13-ANTI_TAMP.Signal=GPXTI13
 PCC.Checker=false
 PCC.Line=STM32F401
 PCC.MCU=STM32F401R(D-E)Tx
@@ -58,7 +65,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F401RETx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.21.0
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.23.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -66,12 +73,13 @@ ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=0
 ProjectManager.MainLocation=Src
+ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=stepping_motor.ioc
 ProjectManager.ProjectName=stepping_motor
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=EWARM
+ProjectManager.TargetToolchain=EWARM V7
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM2_Init-TIM2-false-HAL-true
@@ -94,9 +102,11 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
 TIM2.IPParameters=Prescaler,Period
-TIM2.Period=16000
-TIM2.Prescaler=999
+TIM2.Period=1600
+TIM2.Prescaler=9
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
